[package]
name = "pinecone-blinky"
version = "0.0.1"
authors = ["melastmohican"]
edition = "2018"
license = "ISC"
readme = "README.md"
rust-version = "1.59"

[dependencies]
bl602-hal = { git = "https://github.com/sipeed/bl602-hal" }
embedded-hal = "=1.0.0-alpha.5"
panic-halt = "0.2.0"
riscv = "0.10.0"
riscv-rt = "0.10.0"


# this lets you use `cargo fix`!
[[bin]]
name = "pinecone-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
